--- a/index.ipynb
+++ b/index.ipynb
@@ -40,11 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import scipy.stats as stats\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "sns.set_style(\"whitegrid\")"
    ]
   },
   {
@@ -58,11 +65,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>id</th>\n",
+       "      <th>group</th>\n",
+       "      <th>action</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-09-24 17:42:27.839496</td>\n",
+       "      <td>804196</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-09-24 19:19:03.542569</td>\n",
+       "      <td>434745</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-09-24 19:36:00.944135</td>\n",
+       "      <td>507599</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-09-24 19:59:02.646620</td>\n",
+       "      <td>671993</td>\n",
+       "      <td>control</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-09-24 20:26:14.466886</td>\n",
+       "      <td>536734</td>\n",
+       "      <td>experiment</td>\n",
+       "      <td>view</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    timestamp      id       group action\n",
+       "0  2016-09-24 17:42:27.839496  804196  experiment   view\n",
+       "1  2016-09-24 19:19:03.542569  434745  experiment   view\n",
+       "2  2016-09-24 19:36:00.944135  507599  experiment   view\n",
+       "3  2016-09-24 19:59:02.646620  671993     control   view\n",
+       "4  2016-09-24 20:26:14.466886  536734  experiment   view"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"homepage_actions.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = df[df.group == \"experiment\"]\n",
+    "ctrl = df[df.group == \"control\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "view     6328\n",
+       "click    1860\n",
+       "Name: action, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.action.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "control       4264\n",
+       "experiment    3924\n",
+       "Name: group, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.group.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21857410881801126\n",
+      "0.23649337410805302\n"
+     ]
+    }
+   ],
+   "source": [
+    "c_clicks = ctrl.action.value_counts().click\n",
+    "e_clicks = exp.action.value_counts().click\n",
+    "\n",
+    "control_click_rate = c_clicks / ctrl.shape[0]\n",
+    "experiment_click_rate = e_clicks / exp.shape[0]\n",
+    "\n",
+    "print(control_click_rate)\n",
+    "print(experiment_click_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "# use z test"
    ]
   },
   {
@@ -171,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
